# Counting_Homomorphisms_in_Rust

./: Cargo.toml  LICENSE  README.md  example.ntd  example_2.ntd  format_explanation  tiny_01.graph
data/Experiments/graphs/: randgraph_1024_338354.graph  randgraph_256_7526.graph  randgraph_4_6.graph  randgraph_512_25778.graph  randgraph_64_1045.graph  randgraph_8_13.graph
data/Experiments/ntds/: e_tau_modifying_path_10_0.ntd  e_tau_modifying_path_10_1.ntd  e_tau_modifying_path_10_2.ntd  e_tau_modifying_path_10_3.ntd  e_tau_modifying_path_10_4.ntd  e_tau_modifying_path_10_5.ntd  e_tau_modifying_path_10_6.ntd  e_tau_modifying_path_10_7.ntd  e_tau_modifying_path_10_8.ntd  e_tau_modifying_path_10_9.ntd  e_tau_modifying_path_11_0.ntd  e_tau_modifying_path_11_1.ntd  e_tau_modifying_path_11_10.ntd  e_tau_modifying_path_11_2.ntd  (+80 more)
data/dimacs_graphs/: tiny_01.gr
data/metis_graphs/: bench_1.graph  from_2.graph  from_3.graph  from_4.graph  from_5.graph  to_2.graph  to_3.graph  to_4.graph
data/nice_tree_decompositions/: example.ntd  example_2.ntd  format_explanation  ntd_5.ntd  ntd_k_5.ntd
python/: brute_force_homomorphism_counter.py  complete_ntd_generator.py  fixed_length_path_ntd.py  inflated_ntd.py  path_ntd_generator.py  random_graph_generation.py  random_graphs.py
src/: algorithms.rs  brute_force.rs  diaz.rs  diaz_serna_thilikos.rs  equivalence_class_algorithm.rs  experiments.rs  file_handler.rs  graph_generation.rs  graph_structures.rs  integer_functions.rs  lib.rs  main.rs  modified_DP.rs  modified_dp.rs  tree_decompositions.rs  unit_tests.rs
(+42 files in other folders)
