[package]
name = "Counting_Homomorphisms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.0"
itertools = "0.10.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "counting_homomorphism_benchmark"
harness = false